<resources>
    <string name="app_name">(!PlayStore)</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="play_and_protect">Play and Protect</string>
    <string name="settings">Settings</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="accounts">Accounts</string>
    <string name="wishlist">Wishlist</string>
    <string name="subscription">Subscription</string>
    <string name="notification">Notification</string>
    <string name="my_apps_and_games">My apps and games</string>
    <string name="foryou">For You</string>
    <string name="topcharts">Top Charts</string>
    <string name="events">Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
